--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -38,6 +42,75 @@
                 <button class="btn">Explore New Bangladesh</button>
             </div>
             <img src="./assets/hero.png" alt="">
+        </section>
+
+        <section id="pillars" class="container">
+            <h2>Pillars of "Bangladesh 2.0"</h2>
+            <div class="pillar-container">
+                <div class="pillar-card">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4>Innovation</h4>
+                    <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos</p>
+                </div>
+                <div class="pillar-card">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4>Sustainability</h4>
+                    <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos</p>
+                </div>
+                <div class="pillar-card">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4>Infrastructure</h4>
+                    <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos</p>
+                </div>
+                <div class="pillar-card">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4>Empowerment</h4>
+                    <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="vision" class="container">
+            <h2>The Vision of Future</h2>
+            <p>Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting
+                inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital
+                transformation, and robust infrastructure, the country is set to become a global model of development.
+            </p>
+
+            <div class="vision-container">
+                <div class="vision-card">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4>Digital Transformation</h4>
+                    <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all
+                        citizens.</p>
+                    <button class="btn">Learn More</button>
+                </div>
+                <div class="vision-card">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4>Green Energy</h4>
+                    <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <button class="btn">Learn More</button>
+                </div>
+                <div class="vision-card">
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4>Modern Infrastructure</h4>
+                    <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.
+                    </p>
+                    <button class="btn">Learn More</button>
+                </div>
+            </div>
+
+            <div class="quote-container">
+                <p><i class="fa-solid fa-quote-left"></i>"Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Facilis quas, ducimus labore sequi quos
+                    deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis
+                    culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit,
+                    dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam
+                    tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto
+                    soluta necessitatibus vero?"</p>
+                <h4>Dr. Muhammad Yunus</h4>
+                <p>Chief Advisor of the People's Republic of Bangladesh</p>
+            </div>
         </section>
     </main>
 
