opinion and news section created

--- a/index.html
+++ b/index.html
@@ -112,6 +112,123 @@
                 <p>Chief Advisor of the People's Republic of Bangladesh</p>
             </div>
         </section>
+
+        <section id="opinion" class="container">
+            <h2>Your Opinion Matters</h2>
+            <div class="opinion-container">
+                <table class="opinion-table">
+                    <tr>
+                        <th colspan="2">
+                            <div class="table-header">
+                                <h4>Questions</h4>
+                                <h4>Select Your Opinion</h4>
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>
+                            Do you believe Bangladesh is on the right path toward becoming a developed nation?
+                        </td>
+                        <td>
+                            <form action="">
+                                <select name="" id="">
+                                    <option value="1">Yes, I Agree</option>
+                                    <option value="0">Neutral</option>
+                                    <option value="-1">Disagree</option>
+                                </select>
+                            </form>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Do you believe Bangladesh is on the right path toward becoming a developed nation?
+                        </td>
+                        <td>
+                            <form action="">
+                                <select name="" id="">
+                                    <option value="1">Yes, I Agree</option>
+                                    <option value="0">Neutral</option>
+                                    <option value="-1">Disagree</option>
+                                </select>
+                            </form>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Do you believe Bangladesh is on the right path toward becoming a developed nation?
+                        </td>
+                        <td>
+                            <form action="">
+                                <select name="" id="">
+                                    <option value="1">Yes, I Agree</option>
+                                    <option value="0">Neutral</option>
+                                    <option value="-1">Disagree</option>
+                                </select>
+                            </form>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </section>
+
+        <section id="news" class="container">
+            <h2>Recent News</h2>
+            <p>Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting
+                inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital
+                transformation, and robust infrastructure, the country is set to become a global model of development.
+            </p>
+
+            <div class="news-container">
+                <div class="news-card">
+                    <img src="./assets/satelite.png" alt="">
+                    <div class="card-info">
+                        <h4>Bangladesh Launces New Satellite</h4>
+                        <img src="./assets/al-jazeera.png" alt="">
+                        <div class="date-time">
+                            <span>Date: 05/01/2025</span>
+                            <span>Time: 10.25 PM</span>
+                        </div>
+                        <p>Not until the creation and maintenance of decent conditions of life for all people are
+                            recognized and accepted as a common obligation of all people and all countries—not until
+                            then shall we,
+                            with a certain degree of justification, be able to speak of humankind as civilized</p>
+                            <button class="btn">Read More</button>
+                    </div>
+                </div>
+                <div class="news-card">
+                    <img src="./assets/satelite.png" alt="">
+                    <div class="card-info">
+                        <h4>Bangladesh Launces New Satellite</h4>
+                        <img src="./assets/al-jazeera.png" alt="">
+                        <div class="date-time">
+                            <span>Date: 05/01/2025</span>
+                            <span>Time: 10.25 PM</span>
+                        </div>
+                        <p>Not until the creation and maintenance of decent conditions of life for all people are
+                            recognized and accepted as a common obligation of all people and all countries—not until
+                            then shall we,
+                            with a certain degree of justification, be able to speak of humankind as civilized</p>
+                            <button class="btn">Read More</button>
+                    </div>
+                </div>
+                <div class="news-card">
+                    <img src="./assets/satelite.png" alt="">
+                    <div class="card-info">
+                        <h4>Bangladesh Launces New Satellite</h4>
+                        <img src="./assets/al-jazeera.png" alt="">
+                        <div class="date-time">
+                            <span>Date: 05/01/2025</span>
+                            <span>Time: 10.25 PM</span>
+                        </div>
+                        <p>Not until the creation and maintenance of decent conditions of life for all people are
+                            recognized and accepted as a common obligation of all people and all countries—not until
+                            then shall we,
+                            with a certain degree of justification, be able to speak of humankind as civilized</p>
+                            <button class="btn">Read More</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
